Add unit test of creating page links

--- a/MilitaryStore/Views/_ViewImports.cshtml
+++ b/MilitaryStore/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using MilitaryStore.Models
+@using MilitaryStore.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper MilitaryStore.Infrastructure.*, MilitaryStore
