Fixed some details. Modified categories display. Added cart buttons. Enabled sessions.

--- a/MilitaryStore/Views/_ViewImports.cshtml
+++ b/MilitaryStore/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MilitaryStore.Models
 @using MilitaryStore.Models.ViewModels
+@using MilitaryStore.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper MilitaryStore.Infrastructure.*, MilitaryStore
